deploy: 0ea4888208f6d1d29c5f2e19a3147df11f5fc406

--- a/md_README.html
+++ b/md_README.html
@@ -93,7 +93,7 @@ $(document).ready(function(){initNavTree('md_README.html',''); initResizable(); 
 </div><!--header-->
 <div class="contents">
 <div class="textblock"><p ><img src="https://github.com/Stte/libft/workflows/Norminette/badge.svg" alt="norminette" style="pointer-events: none;" class="inline"/> <img src="https://github.com/Stte/libft/workflows/Tests/badge.svg" alt="tests" style="pointer-events: none;" class="inline"/></p>
-<p ><b>Documentation</b> <a href="https://stte.github.io/libft/html/">https://stte.github.io/libft/html/</a> </p>
+<p ><b>Documentation</b> <a href="https://stte.github.io/libft">https://stte.github.io/libft</a> </p>
 </div></div><!-- contents -->
 </div><!-- PageDoc -->
 </div><!-- doc-content -->
